--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@mui/material-nextjs": "^6.1.1",
+    "@mui/x-data-grid": "^7.18.0",
+    "axios": "^1.7.7",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
