--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@mui/material-nextjs": "^6.1.1",
     "@mui/x-data-grid": "^7.18.0",
     "axios": "^1.7.7",
+    "embla-carousel-autoplay": "^8.3.0",
+    "embla-carousel-class-names": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
     "i": "^0.3.7",
     "next": "14.2.13",
     "npm": "^10.8.3",
     "react": "^18",
-    "react-dom": "^18",
-    "react-material-ui-carousel": "^3.4.2",
-    "react-responsive-carousel": "^3.2.23"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
