--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fe",
+  "name": "eprocurement-batamindo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,7 +17,9 @@
     "@mui/material": "^6.1.1",
     "@mui/material-nextjs": "^6.1.1",
     "@mui/x-data-grid": "^7.18.0",
+    "@mui/x-date-pickers": "^7.19.0",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-class-names": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
