--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/x-data-grid": "^7.18.0",
     "@mui/x-date-pickers": "^7.19.0",
     "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.13",
     "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-class-names": "^8.3.0",
